WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
227044
[GPU Process] ConcreteImageBuffer::baseTransform() returns incorrect transform for unaccelerated ImageBuffer
https://bugs.webkit.org/show_bug.cgi?id=227044
Summary
[GPU Process] ConcreteImageBuffer::baseTransform() returns incorrect transfor...
Said Abou-Hallawa
Reported
2021-06-15 13:25:18 PDT
This is because ImageBufferShareableBitmapBackend does not set isOriginAtTopLeftCorner = true for CG platform.
Attachments
Patch
(10.77 KB, patch)
2021-06-15 13:54 PDT
,
Said Abou-Hallawa
simon.fraser
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(10.47 KB, patch)
2021-06-15 16:24 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2021-06-15 13:54:09 PDT
Created
attachment 431478
[details]
Patch
Said Abou-Hallawa
Comment 2
2021-06-15 13:54:35 PDT
<
rdar://78642742
>
Said Abou-Hallawa
Comment 3
2021-06-15 16:24:05 PDT
Created
attachment 431492
[details]
Patch
EWS
Comment 4
2021-06-15 18:47:49 PDT
Committed
r278918
(
238849@main
): <
https://commits.webkit.org/238849@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 431492
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug