[GPU Process] ConcreteImageBuffer::baseTransform() returns incorrect transform for unaccelerated ImageBuffer https://bugs.webkit.org/show_bug.cgi?id=227044 <rdar://78642742>

Reviewed by Simon Fraser.

Source/WebCore:

The static constant ImageBufferBackend::isOriginAtUpperLeftCorner is used
to tell where the origin of the physical graphics context. For CG platforms,
it is at the bottom left corner. This requires the coordinates system to
be moved to the top-left corner and flipped.

The fix is:
1) Rename isOriginAtUpperLeftCorner to isOriginAtBottomLeftCorner since
   it is a description for the physical graphics context. All the logical
   graphics contexts have to have their coordinates system at the top-left
   corner.
2) Set isOriginAtBottomLeftCorner to true in ImageBufferCGBackend only
   so all the super classes inherit the 'true' value. This includes
   ImageBufferShareableBitmapBackend for CG platforms.

Test: fast/canvas/canvas-large-dimensions-drawing.html

* platform/graphics/ConcreteImageBuffer.h:
* platform/graphics/ImageBufferBackend.h:
* platform/graphics/cg/ImageBufferCGBackend.h:
* platform/graphics/cg/ImageBufferCGBitmapBackend.h:
* platform/graphics/cg/ImageBufferIOSurfaceBackend.h:

Source/WebKit:

* Shared/RemoteLayerTree/CGDisplayListImageBufferBackend.h:
* WebProcess/GPU/graphics/cocoa/ImageBufferShareableIOSurfaceBackend.h:

LayoutTests:

The large size of the canvas in this layout test will force creating
unaccelerated ImageBufferBackend.

* fast/canvas/canvas-large-dimensions-drawing-expected.html: Added.
* fast/canvas/canvas-large-dimensions-drawing.html: Added.


Canonical link: https://commits.webkit.org/238849@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278918 268f45cc-cd09-0410-ab3c-d52691b4dbfc