Source/WebCore/platform/graphics/cg/ImageBufferCGBitmapBackend.h
@@ -53,8 +53,6 @@ public:
     std::optional<PixelBuffer> getPixelBuffer(const PixelBufferFormat& outputFormat, const IntRect&) const override;
     void putPixelBuffer(const PixelBuffer&, const IntRect& srcRect, const IntPoint& destPoint, AlphaPremultiplication destFormat) override;
 
-    static constexpr bool isOriginAtUpperLeftCorner = true;
-
 private:
     ImageBufferCGBitmapBackend(const Parameters&, void* data, RetainPtr<CGDataProviderRef>&&, std::unique_ptr<GraphicsContext>&&);
 
