Source/WebKit/Shared/RemoteLayerTree/CGDisplayListImageBufferBackend.h
@@ -52,8 +52,6 @@ public:
     std::optional<WebCore::PixelBuffer> getPixelBuffer(const WebCore::PixelBufferFormat& outputFormat, const WebCore::IntRect&) const override;
     void putPixelBuffer(const WebCore::PixelBuffer&, const WebCore::IntRect& srcRect, const WebCore::IntPoint& destPoint, WebCore::AlphaPremultiplication destFormat) override;
 
-    static constexpr bool isOriginAtUpperLeftCorner = true;
-
 protected:
     CGDisplayListImageBufferBackend(const Parameters&, std::unique_ptr<WebCore::GraphicsContext>&&);
 
